--- a/dog.html
+++ b/dog.html
@@ -12,14 +12,18 @@
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
   
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="dog.css">
 </head>
 
 <body background="canvas.png">
 <center>
             <h1 class="btn btn-danger heading">Angry Dog !!</h1>
         <br><br> <br>
-        <a class="btn btn-danger" href="index.html">Back ! <--</a>
+        <a class="btn btn-danger back" href="index.html">Back ! --></a>
+        <h3 id="status" class="btn btn-danger"></h3>
     </center>     
     
     </body>
-    </html>
+    
+  <script src="dog.js"></script>
+    </html>                               
