--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
 <body background="canvas.png">
   <center>
     <h1 class="btn btn-info heading">Hacker Detects !</h1>
-    <h3 id="status" class="btn btn-danger"></h3>
+    
     <br><br> <br>
     <a class="btn btn-success anchor" href="dog.html">Angry Dog !</a>
     <br><br> <br>
-    <a class="btn btn-danger anchor" href="">Library !</a>
+    <a class="btn btn-danger anchor" href="library.html">Library !</a>
     <br><br> <br>
-    <a class="btn btn-warning anchor" href="">Kitchen Area !</a>
+    <a class="btn btn-info anchor" href="tvroom.html">Living Room !</a>
     <br><br> <br>
-    <a class="btn btn-info anchor" href="">Living Room !</a>
-    <br><br> <br>
-    <a class="btn btn-primary anchor" href="">coding setup !</a>
+    <a class="btn btn-warning anchor" href="coding.html">coding setup !</a>
     
   </center>
 
